# research-paper-curator

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  gradio_launcher.py  pyproject.toml
airflow/: Dockerfile  entrypoint.sh  requirements-airflow.txt
airflow/dags/: arxiv_paper_ingestion.py  hello_world_dag.py
airflow/dags/arxiv_ingestion/: common.py  fetching.py  indexing.py  reporting.py  setup.py
src/: config.py  dependencies.py  exceptions.py  gradio_app.py  main.py  test.py
src/db/: factory.py
src/db/interfaces/: mysql.py
src/inference/: inference_domain_classifier.py  inference_hybrid_indexing.py  inference_metadata_fetcher.py  inference_opensearch_indexing.py  inference_redis.py
src/models/: paper.py
src/repositories/: __init__.py  paper.py
src/routers/: ask.py  papers.py  ping.py  search.py
src/schemas/: __init__.py  health.py
src/schemas/api/: ask.py  health.py  search.py
src/schemas/arxiv/: paper.py
src/schemas/domain_classifier/: model.py
src/schemas/indexing/: model.py
src/schemas/pdf_parser/: models.py
src/services/: metadata_fetcher.py
src/services/arxiv/: client.py  factory.py
src/services/cache/: client.py  factory.py
src/services/domain_classifier/: base.py  factory.py  gemini_domain_classifier.py  prompts.py
src/services/embeddings/: factory.py  jina_client.py
src/services/indexing/: factory.py  hybrid_indexer.py  text_chunker.py
src/services/ollama/: client.py  prompt_builder.py  prompts.py
src/services/opensearch/: client.py  factory.py  index_config.py  (+2 more)
tests/unit/: test_config.py
(+7 files in other folders)
