[project]
name = "research-paper-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "docling>=2.76.0",
    "fastapi[standard]>=0.135.1",
    "gradio>=4.0.0",
    "httpx>=0.28.1",
    "opensearch-py==3.0.0",
    "pymysql>=1.1.2",
    "pypdfium2>=5.5.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "anyio[trio]>=4.12.1",
    "asgi-lifespan>=2.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-sqlalchemy>=1.4.53.38",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
